CHANGE: UI    | User Comment field more useful in General torrent view - easy edit link, hyperlink formatting, auto-resizing [amc1]
CHANGE: UI    | "Show Transfer Bar" menu option is now a checkbox menu item - so you can now hide the transfer bar using the menu item [amc1]
CHANGE: Plug  | Added setVisible method for plugin menu items.
                
BUGFIX: Core  | Fixed bug where renaming a download in some conditions would generate "Target is sub-directory" errors [amc1]                
BUGFIX: Core  | Fixed swarm view rendering bug where some incomplete peers were shown as full circles [The 8472]
BUGFIX: Plug  | Fixed bug where previously removed child menu items would still be present when generating some menus [amc1]


2007.06.20 | Azureus 3.0.1.6

FEATURE: Core | IP Filter Autoloading. Supports DAT (eMule), P2P (PeerGardian, splist), and P2B v1,2,3 (Peer Gardian 2) formats. [TuxPaper]
FEATURE: UI   | Option to display divider lines every 60 updates on the Statistics view [amc1]
FEATURE: Plug | Added helper class to make listening to download events across all downloads easier [amc1]
FEATURE: Core | Azureus AutoSpeed v2 Beta [ranul]

BUGFIX: Core | Plugin installation/updates using Vista [parg,tuxpaper]



2007.05.24 | Azureus 3.0.1.4

FEATURE: Core | Byte-level download control for Downloads [Parg] 
FEATURE: Core | Speed tester wizard [ranul,Parg]
FEATURE: UI   | Added "Transfers Bar" (similar to the "Download Bar") [amc1]
FEATURE: UI   | Correctly identifies FoxTorrent and Blizzard Downloader peers [amc1]
FEATURE: UI   | Determines version information for Bits On Wheels and Opera peers [amc1]
FEATURE: UI   | Vivaldi view can use mouse wheel too zoom now (requires clicking on the view first) [TuxPaper]
FEATURE: UI   | Date Completed column [TuxPaper]
FEATURE: UI   | (Beta) Various Auto Speed algorithms [ranul]
FEATURE: UI   | Auto-open MyShares if any shares [Parg]

CHANGE: Core  | Handle 503s better with webseeds [Jochen Seifarth,Parg]